# Dithers-boyfriend

./: .gitignore  BUILD.md  CMakeLists.txt  EXAMPLES.md  LICENSE  Makefile  QUICKSTART.md  README.md  WINDOWS_BUILD.md  build.bat  build.sh  index.html  package.json  tailwind.config.js
src/: App.css  App.tsx  cli.cpp  dithering.cpp  dithering.h  index.css  main.cpp  platform.cpp  platform.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: dither.rs  main.rs  video.rs
